# routes/api.php
@@ -11,3 +11,4 @@ Route::apiResource('/alvo', AlvoController::class);
 Route::get('/wpp/getStatusWPP', [WppController::class, 'getStatusWPP']);
 Route::get('/wpp/getQRCodePNG', [WppController::class, 'getQRCodePNG']);
 Route::get('/wpp/getQRCodeBIN', [WppController::class, 'getQRCodeBIN']);
+Route::get('/wpp/mensagemTeste', [WppController::class, 'mensagemTeste']);
